# terminal-agent

./: LICENSE  README.md  agents.py  diff.txt  main.py  models.py  pyproject.toml  requirements.txt  summary.txt  workflow.py
terminal_agent/: main.py  models.py  workflow.py
