[tool.poetry]
name = "terminal-agent"
version = "0.1.0"
description = ""
authors = ["DaveOkpare <okparedave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
instructor = "1.3.4"
jsonref = "1.1.0"
openai = "1.35.7"
pydantic = "2.7.4"
python-dotenv = "1.0.1"
typer = "0.12.3"
rich = "13.7.1"

[tool.poetry.scripts]
agent = "terminal_agent.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
